--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel='stylesheet' href='style.css'>
+<link rel='stylesheet' href='docs/assets/css/style.css'/>
 </head>
 <body>
 
@@ -56,14 +56,14 @@
 
  Image Header 
 <div class=".urbA w3-display-container w3-animate-opacity">
-  <img class = ".urdA" src="urbanAerial.png" alt="urban space" style="width:100%;min-height:350px;max-height:600px;">
+  <img class = ".urdA" src="docs/assets/images/urbanAerial.png" alt="urban space" style="width:100%;min-height:350px;max-height:600px;">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom w3-xlarge w3-wide w3=animate-opacity">  
     <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">Movement Title</button>
   </div>
 </div>
 -->
       
-<!-- Modal -->
+<!-- Modal
 <div id="id01" class="w3-modal">
   <div class="w3-modal-content w3-card-4 w3-animate-top">
     <header class="w3-container w3-teal w3-display-container"> 
@@ -80,8 +80,9 @@
     </footer>
   </div>
 </div>
+-->
 
-<!-- first parallax img w Logo Text -->
+<!-- Logo Text -->
             <div class='urbA w3-display-container w3-opacity-min' id='home'>
                 <div class='w3-display-bottomleft' style='white-space:nowrap;'>
                     <span class='w3-center w3-padding-large w3-xlarge w3-wide w3=animate-opacity'>URBAN HEAT ISLAND AWARENESS MOVEMENT</span>
