--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <!--
 
  Image Header 
-<div class=".urbA w3-display-container w3-animate-opacity">
-  <img class = ".urdA" src="docs/assets/images/urbanAerial.png" alt="urban space" style="width:100%;min-height:350px;max-height:600px;">
+<div class="urbA w3-display-container w3-animate-opacity">
+  <img class="urdA" src="docs/assets/images/urbanAerial.png" alt="urban space" style="width:100%;min-height:350px;max-height:600px;">
   <div class="w3-container w3-display-bottomleft w3-margin-bottom w3-xlarge w3-wide w3=animate-opacity">  
     <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Go To W3.CSS">Movement Title</button>
   </div>
