--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 </div>
 
 <!-- Image of location/map -->
-<div class='.spirit w3-display-container w3-opacity-min'>
+<div class='spirit w3-display-container w3-opacity-min'>
 <!--
                 <div class='w3-display-middle' style='white-space:nowrap;'>
                     <span class='w3-center w3-padding-large w3-black w3-xlarge w3-wide w3=animate-opacity'>ART AND ANALYSIS</span>
