--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Movement Title</title>
+<title>Students for Sustainable Infrastructure</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -86,11 +86,11 @@
 <!-- Logo Text -->
             <div class='urbA w3-display-container w3-opacity-min' id='home'>
                 <div class='w3-display-bottomleft' style='white-space:nowrap;'>
-                    <span class='w3-center w3-padding-large w3-xlarge w3-wide w3=animate-opacity'>URBAN HEAT ISLAND AWARENESS MOVEMENT</span>
+                    <span class='w3-center w3-padding-large w3-xlarge w3-wide w3=animate-opacity'>STUDENTS FOR SUSTAINABLE INFRASTRUCTURE</span>
                 </div>
             </div>
     
-<div class='w3-display-contrainer' id='about'>
+<div class='w3-display-container' id='about'>
     <iframe width='100%' height="750px" src=https://tyeingram.users.earthengine.app/view/uhidenverexplorer frameborder="1" scrolling="no"></iframe>
 </div>
 
@@ -141,8 +141,8 @@
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
 
 <div class="w3-quarter">
-<h2>The Movement</h2>
-<p>Climate change is on the rise. Within the socio economic disparities experienced in many places of the US will be too. The focus of this movement is to raise public awarness and lobby legislators at the municipal, county, and state levels to prepare for the increasinly harmful UHIs that are 0bserved among urban spaces here in Colorado.</p>
+<h2>It's getting "S.H.I.T.T.Y." out there...</h2>
+<p>It's getting "So Hot It Totally Tortures You" out there. Climate change is on the rise. Students for Sustainable Infrastructure wants you to join our cause in curbing these changes. With climate change the socio-economic disparities experienced in many places around the US will widen as well. The focus of this movement is to raise public awarness and lobby legislators at the municipal, county, and state levels to prepare for the increasinly harmful UHIs that are observed among urban spaces here in Colorado and at the national scale.</p>
 </div>
 
 <div class="w3-quarter">
@@ -177,7 +177,7 @@
             <div class="w3-container">
                 <h3>...</h3>
                     <h4>Be about it!</h4>
-                        <p>Make your self heard </p>
+                        <p>Make yourself heard </p>
                         <p>March, make a sign, yell!</p>
                         <p>(Drink lots of water...)</p>
             </div>
@@ -235,9 +235,9 @@
       <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
         <img src="/w3images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
             <span class="w3-right w3-opacity">1 min</span>
-                <h4>John Doe</h4><br>
+                <h4>John McDonald, farmer.</h4><br>
                     <hr class="w3-clear">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p>Its hot man, last week all the egggs my chickens laid hatched scrambled!!! Im a farmer not a restaurantuer!</p>
           <div class="w3-row-padding" style="margin:0 -16px">
             <div class="w3-half">
               <img src="/w3images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
