--- a/index.html
+++ b/index.html
@@ -359,11 +359,11 @@
           <div class="w3-container">
               <h1>Find stuff out in these videos..</h1>
               <h2>Part I</h2>
-                <div class="w3-container w3-padding-10">
+                <div class="w3-container w3-center">
                     <iframe src="https://drive.google.com/file/d/1uVTyTEwtHPAKPfBmLbGfGn8ptNGSvhDV/preview" width="640" height="480" allow="autoplay"></iframe>
                 </div>
                <h2>Part II</h2>
-                <div class="w3-container w3-padding-10">
+                <div class="w3-container w3-center">
                     <iframe src="https://drive.google.com/file/d/1mydmcYkjhyaT7z99uhDYBiqNZOI0DSRV/preview" width="640" height="480" allow="autoplay"></iframe>
                 </div>
           </div>
