--- a/index.html
+++ b/index.html
@@ -190,15 +190,17 @@
 <!-- Work Row -->
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
 <!--laughism-->
-<div class="w3-quarter">
-<h2>It's getting "S.H.I.T.T.Y." out there...</h2>
-<p>It's getting "So Hot It Totally Tortures You" out there. Climate change is on the rise. Students for Sustainable Infrastructure wants you to join our cause in curbing these changes. With climate change the socio-economic disparities experienced in many places around the US will widen as well. The focus of this movement is to raise public awarness and lobby legislators at the municipal, county, and state levels to prepare for the increasinly harmful UHIs that are observed among urban spaces here in Colorado and at the national scale.</p>
-</div>
+    <div class="w3-quarter" style="height:100%">
+        <h2>It's getting "S.H.I.T.T.Y." out there...</h2>
+            <p>
+                It's getting "So Hot It Totally Tortures You" out there. Climate change is on the rise. Students for Sustainable Infrastructure wants you to join our cause in curbing these changes. With climate change the socio-economic disparities experienced in many places around the US will widen as well. The focus of this movement is to raise public awarness and lobby legislators at the municipal, county, and state levels to prepare for the increasinly harmful UHIs that are observed among urban spaces here in Colorado and at the national scale.
+        </p>
+    </div>
 
 <div class="w3-quarter">
     <div class="w3-card w3-white">
-       <img src="docs/assets/images/hot1.gif" alt="sweating" style="width:100%">
-<!--        <img src="hot1.gif" alt="sweating" style="width:100%">-->
+       <img src="docs/assets/images/hot2.gif" alt="sweating" style="width:100%" "height=150" >
+<!--        <img src="hot1.gif" alt="sweating" style="width:100%" "height:30%">-->
           <div class="w3-container">
               <h3>What you can do..</h3>
                 <h4>Become active in the movement</h4>
@@ -210,31 +212,34 @@
 </div>
 
 <div class="w3-quarter">
-    <div class="w3-card w3-white">
-      <img src="docs/assets/images/hot2.gif" alt="so damn hot" style="width:100%">
+    <div class="w3-card w3-white" style="height:100%">
+<!--                <img src="hot2.gif" alt="sweating" style="width:100%">-->
+      <img src="docs/assets/images/hot1.gif" alt="so damn hot" style="width:100%" "height=150">
           <div class="w3-container">
               <h3>...</h3>
                   <h4>Stay Cool</h4>
                       <p>Its hot out there..</p>
                       <p>Bring an extra shirt..</p>
                       <p>Maybe two..</p>
+              <p>Make yourself heard </p>
+                        <p>March, make a sign, yell!</p>
+                        <p>(Drink lots of water...)</p>
            </div>
      </div>
 </div>
 
 <div class="w3-quarter">
     <div class="w3-card w3-white">
+<!--                <img src="hot3.gif" alt="sweating" style="width:100%" "height=150">-->
         <img src="docs/assets/images/hot3.gif" alt="woah, bro..." style="width:100%">
             <div class="w3-container">
                 <h3>...</h3>
                     <h4>Don't be this guy!</h4>
-                        <p>Make yourself heard </p>
-                        <p>March, make a sign, yell!</p>
-                        <p>(Drink lots of water...)</p>
+                        
             </div>
     </div>
 </div>
-    </div>
+</div>
     
 <!--our work-->
 <hr>
