--- a/index.html
+++ b/index.html
@@ -220,10 +220,12 @@
                   <h4>Stay Cool</h4>
                       <p>Its hot out there..</p>
                       <p>Bring an extra shirt..</p>
-                      <p>Maybe two..</p>
+                      <p>Stay classy..</p>
+                      <p>(Drink lots of water...)</p>
+                       
               <p>Make yourself heard </p>
                         <p>March, make a sign, yell!</p>
-                        <p>(Drink lots of water...)</p>
+                        
            </div>
      </div>
 </div>
